--- a/styles.css
+++ b/styles.css
@@ -18,13 +18,49 @@ header {
     background-color: rgb(203, 226, 234);
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    gap: 130px;
+    align-items: center;
     width: 15%;
 }
 
 h1 {
+    margin-top: 25px;
+    position: relative;
     font-size: 54px;
     font-weight: normal;
+}
+
+h1::after {
+    position: absolute;
+    bottom: 0;
+    left: -25px;
+
+    width: 100%;
+    height: 5px;
+    background-color: rgb(255, 255, 255);
+
+    content: '  ';
+}
+
+h1::before {
+    position: absolute;
+    top: 0;
+    right: -25px;
+
+    width: 100%;
+    height: 5px;
+    background-color: white;
+
+    content: '  ';
+}
+
+
+.colors {
+    display: flex;
+    flex-direction: column;
+    height: 500px;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .color-select {
@@ -34,6 +70,26 @@ h1 {
     flex-direction: column;
     gap: 20px;
 }
+.colors .last-color {
+    background-color: red;
+    color: red;
+    border: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid black;
+    visibility: hidden;
+}
+
+
+
+
+
+
+
+
+
+
 
 main {
     height: 100vh;
@@ -49,8 +105,8 @@ main {
 }
 
 .box{
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
     border: 1px solid black;
-
+    cursor: pointer;
 }
